@@ -2593,10 +2593,13 @@ uint32_t DP_msg_layer_tree_delete_merge_to(const DP_MsgLayerTreeDelete *mltd);
 
 #define DP_MSG_TRANSFORM_REGION_MODE_NEAREST  0
 #define DP_MSG_TRANSFORM_REGION_MODE_BILINEAR 1
+#define DP_MSG_TRANSFORM_REGION_MODE_BINARY   2
 
-#define DP_MSG_TRANSFORM_REGION_NUM_MODE 2
-#define DP_MSG_TRANSFORM_REGION_ALL_MODE \
-    DP_MSG_TRANSFORM_REGION_MODE_NEAREST, DP_MSG_TRANSFORM_REGION_MODE_BILINEAR
+#define DP_MSG_TRANSFORM_REGION_NUM_MODE 3
+#define DP_MSG_TRANSFORM_REGION_ALL_MODE       \
+    DP_MSG_TRANSFORM_REGION_MODE_NEAREST,      \
+        DP_MSG_TRANSFORM_REGION_MODE_BILINEAR, \
+        DP_MSG_TRANSFORM_REGION_MODE_BINARY
 
 const char *DP_msg_transform_region_mode_variant_name(unsigned int value);
 
